<resources>
    <string name="app_name">ContactsManager</string>
    <string name="show_additional_fields">SHOW ADDITIONAL FIELDS</string>
    <string name="hide_additional_fields">HIDE ADDITIONAL FIELDS</string>
    <string name="name">Name</string>
    <string name="number_example">1122334455</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="number_error">Not a valid phone number</string>
</resources>